# modular-pipelines

./: .gitignore  .pydeps  LICENSE  README.md  config.py  constants.py  environment.yml  example.py  module_huggingface.py  pyproject.toml  run.py  run_dev.py  run_multi.py  run_pipeline.py  sentiment_analysis_example.py  train_huggingface.py  train_sklearn.py  type.py
.github/workflows/: diagram.yml  test.yml
adapter/: base.py  concatenator.py  identity.py
blocks/: base.py  concat.py  data.py  ensemble.py  io.py  iomanager.py  pipeline.py
blocks/adaptors/: __init__.py  base.py  classification_output.py  df_list.py  df_numpy.py  listoflist_numpy.py  series_list.py
blocks/augmenters/: __init__.py  base.py  identity.py  spelling_autocorrect.py  spelling_spello.py  statistics.py  synonyms.py
blocks/models/: base.py  random.py  sklearn.py  vader.py
blocks/models/huggingface/: __init__.py  base.py  dataset.py  infer.py  loading.py  train.py
blocks/models/perspective/: base.py
blocks/models/pytorch/: base.py  decoder.py
blocks/models/sklearn/: sklearn.py
blocks/transformations/: __init__.py  base.py  lemmatizer.py  no_lemmatizer.py  predicitions_to_text.py  sklearn.py  text_statistics.py  tokenizer.py
configs/: __init__.py  config.py  constants.py
data/: dataloader.py  dataset.py  merge.py  state.py  transformation.py  transformation_hatecheck.py  transformation_hatespeech_detection.py  transformation_hatespeech_offensive.py
data/original/: README.md  test.jsonl  train.jsonl  val.jsonl
model/: average_ensemble.py  base.py  base_class.py  data.py  ensemble.py  linear.py  pipeline.py  sequential.py
model/adaptors/: __init__.py  base.py  df_numpy.py
model/augmenters/: base.py  identity.py  spellcorrector.py  spelling_autocorrect.py  spelling_spello.py  statistics.py  synonyms.py
model/huggingface/: base.py  dataset.py  infer.py  train.py
model/huggingface_classifier/: base.py  train.py
model/nltk/: base.py
model/pytorch/: base.py  decoder.py
model/scikitlearn_classifier/: train_sklearn.py
model/sklearn/: __init__.py  preprocess.py  sklearn.py
model/transformations/: __init__.py  base.py  minmaxscaler.py  predicitions_to_text.py  sklearn.py  tokenizer.py
output/: failed_runs.txt
output/pipelines/nlp_sklearn_autocorrect/: model1.pkl
output/runs/2022-07-18-16-50-07/: stats.csv
plugins/: __init__.py  analyser_plugin.py  base.py  id_populator_plugin.py  integrity_plugin.py  output_analyser_plugin.py  utils.py  wandb_plugin.py
runner/: evaluation.py  integrity.py  run.py  run_pipeline.py  runner.py  store.py  train.py  utils.py
src/: run_dev.py
src/blocks/: base.py  pipeline.py
src/blocks/adaptors/: __init__.py  series_list.py
src/blocks/augmenters/: spelling_spello.py
src/blocks/models/huggingface/: base.py  loading.py  train.py
src/blocks/models/pytorch/: decoder.py
src/blocks/transformations/: no_lemmatizer.py  text_statistics.py
src/data/metric/: f1.json
src/mopi/: __init__.py  inference.py  run.py  run_dev.py  run_inference.py  run_training.py  run_training_dev.py  type.py
src/mopi/blocks/: base.py  concat.py  ensemble.py  io.py  pipeline.py
src/mopi/blocks/adaptors/: base.py  classification_output.py  listoflist_numpy.py  series_list.py
src/mopi/blocks/augmenters/: __init__.py  base.py  spelling_autocorrect.py  spelling_spello.py  synonyms.py
src/mopi/blocks/models/: base.py  random.py  sklearn.py  vader.py
src/mopi/blocks/models/huggingface/: base.py  dataset.py  infer.py  loading.py  train.py
src/mopi/blocks/models/perspective/: __init__.py  base.py
src/mopi/blocks/models/pytorch/: base.py  decoder.py
src/mopi/blocks/transformations/: __init__.py  base.py  lemmatizer.py  no_lemmatizer.py  sklearn.py  text_statistics.py  tokenizer.py
src/mopi/data/: dataloader.py
src/mopi/data/metric/: f1.py
src/mopi/plugins/: analyser_plugin.py  base.py  integrity_plugin.py  output_analyser_plugin.py  utils.py  wandb_plugin.py
src/mopi/runner/: evaluation.py  runner.py  store.py  train.py  utils.py
src/mopi/utils/: dataset_analytics.py  dict.py  hierarchy.py  json.py  printing.py  process_block.py  random.py  setter.py
src/plugins/: __init__.py  analyser_plugin.py
src/runner/: utils.py
src/utils/: dataset_analytics.py  hierarchy.py  list.py
tests/: test_experiments.py  test_unittests.py
training/: train.py
utils/: balance_labels.py  dict.py  env_interface.py  flatten.py  hierarchy.py  huggingface_hub.py  json.py  list.py  logging.py  logging_util.py  printing.py  process_block.py  random.py  run_helpers.py  setter.py  sklearn.py  spacy.py
